Updated VS2008 projects
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6580 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/plugins/DocumentReader/DocumentReader_9.vcproj
+++ b/plugins/DocumentReader/DocumentReader_9.vcproj
@@ -76,10 +76,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				IgnoreImportLibrary="true"
 				AdditionalDependencies="zlibwapi.lib"
 				OutputFile="$(OutDir)/DocumentReader.dll"
 				LinkIncremental="2"
-				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories="..\..\shareaza\zlib"
 				ModuleDefinitionFile="DocumentReader.def"
 				GenerateDebugInformation="true"
@@ -168,10 +168,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				IgnoreImportLibrary="true"
 				AdditionalDependencies="zlibwapi.lib"
 				OutputFile="$(OutDir)/DocumentReader.dll"
 				LinkIncremental="2"
-				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories="..\..\shareaza\zlib"
 				ModuleDefinitionFile="DocumentReader.def"
 				GenerateDebugInformation="true"
@@ -263,6 +263,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				IgnoreImportLibrary="true"
 				AdditionalDependencies="Libcmt.lib zlibwapi.lib"
 				OutputFile="$(OutDir)/DocumentReader.dll"
 				LinkIncremental="1"
@@ -363,6 +364,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				IgnoreImportLibrary="true"
 				AdditionalDependencies="Libcmt.lib zlibwapi.lib"
 				OutputFile="$(OutDir)/DocumentReader.dll"
 				LinkIncremental="1"
