Small update (Neglacio)
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6594 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -2486,7 +2486,7 @@ BEGIN
     CONTROL         "Flood protection:",IDC_IRC_FLOODENABLE,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,13,33,132,9
     EDITTEXT        IDC_IRC_FLOODLIMIT,23,46,26,12,ES_AUTOHSCROLL
-    LTEXT           "Lines per second.",IDC_STATIC,53,48,93,12
+    LTEXT           "lines per second",IDC_STATIC,53,48,93,12
     CONTROL         "Show timestamp",IDC_IRC_TIMESTAMP,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,14,62,132,9
     LTEXT           "Screen Font:",IDC_STATIC,14,75,132,11
