Updated VS2008 projects
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6598 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/plugins/RatDVDPlugin/RatDVDReader_9.vcproj
+++ b/plugins/RatDVDPlugin/RatDVDReader_9.vcproj
@@ -87,7 +87,7 @@
 				ModuleDefinitionFile="RatDVDReader.def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
-				BaseAddress="0x25000000"
+				BaseAddress="0x22200000"
 				ImportLibrary="$(OutDir)/RatDVDReader.lib"
 				TargetMachine="1"
 			/>
@@ -183,7 +183,7 @@
 				ModuleDefinitionFile="RatDVDReader.def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
-				BaseAddress="0x25000000"
+				BaseAddress="0x22200000"
 				ImportLibrary="$(OutDir)/RatDVDReader.lib"
 				TargetMachine="17"
 			/>
@@ -284,10 +284,8 @@
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				BaseAddress="0x22000000"
-				SupportUnloadOfDelayLoadedDLL="false"
-				ImportLibrary="$(OutDir)/RatDVDReader.lib"
-				MergeSections=".rdata=.text"
+				SetChecksum="true"
+				BaseAddress="0x22200000"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -387,10 +385,8 @@
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				BaseAddress="0x22000000"
-				SupportUnloadOfDelayLoadedDLL="false"
-				ImportLibrary="$(OutDir)/RatDVDReader.lib"
-				MergeSections=".rdata=.text"
+				SetChecksum="true"
+				BaseAddress="0x22200000"
 				TargetMachine="17"
 			/>
 			<Tool
