Updated VS2008 projects
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6599 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/plugins/ImageViewer/ImageViewer_9.vcproj
+++ b/plugins/ImageViewer/ImageViewer_9.vcproj
@@ -280,10 +280,8 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="unicows.lib kernel32.lib gdi32.lib user32.lib shell32.lib advapi32.lib odbc32.lib odbccp32.lib rpcrt4.lib"
 				LinkIncremental="1"
-				IgnoreAllDefaultLibraries="false"
-				IgnoreDefaultLibraryNames="kernel32.lib advapi32.lib user32.lib gdi32.lib"
+				IgnoreDefaultLibraryNames=""
 				ModuleDefinitionFile="ImageViewer.def"
 				ProgramDatabaseFile=".\ReleaseUMinSize/ImageViewer.pdb"
 				SubSystem="2"
@@ -386,10 +384,8 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="unicows.lib kernel32.lib gdi32.lib user32.lib shell32.lib advapi32.lib odbc32.lib odbccp32.lib rpcrt4.lib"
 				LinkIncremental="1"
-				IgnoreAllDefaultLibraries="false"
-				IgnoreDefaultLibraryNames="kernel32.lib advapi32.lib user32.lib gdi32.lib"
+				IgnoreDefaultLibraryNames=""
 				ModuleDefinitionFile="ImageViewer.def"
 				ProgramDatabaseFile=".\ReleaseUMinSize/ImageViewer.pdb"
 				SubSystem="2"
