--- a/plugins/DocumentReader/DocumentReader_9.vcproj
+++ b/plugins/DocumentReader/DocumentReader_9.vcproj
@@ -264,12 +264,12 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="Libcmt.lib zlibwapi.lib"
+				AdditionalDependencies="zlibwapi.lib"
 				OutputFile="$(OutDir)/DocumentReader.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories="..\..\shareaza\zlib"
-				IgnoreDefaultLibraryNames="User32.lib;GDI32.lib;ComDlg32.lib;WinSpool.lib;shell32.lib;version.lib"
+				IgnoreDefaultLibraryNames=""
 				ModuleDefinitionFile="DocumentReader.def"
 				SubSystem="2"
 				OptimizeReferences="2"
@@ -365,12 +365,12 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="Libcmt.lib zlibwapi.lib"
+				AdditionalDependencies="zlibwapi.lib"
 				OutputFile="$(OutDir)/DocumentReader.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories="..\..\shareaza\zlib"
-				IgnoreDefaultLibraryNames="User32.lib;GDI32.lib;ComDlg32.lib;WinSpool.lib;shell32.lib;version.lib"
+				IgnoreDefaultLibraryNames=""
 				ModuleDefinitionFile="DocumentReader.def"
 				SubSystem="2"
 				OptimizeReferences="2"
